--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,4 +35,46 @@
     /* Font-Family */
     --inter: "Inter", sans-serif;
     --inter-tight: "Inter Tight", sans-serif; 
-  }
+}
+
+body{
+    background-color: var(--background-primary);
+    font-family: var(--inter);
+    padding: 5rem;
+    color: var(--content-secondary);
+
+    & h1, h2, h3, strong{
+        color: var(--content-primary);
+    }
+
+}
+
+main {
+    max-width: 1280px;
+    margin: auto;
+}
+
+form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+
+    & input[type="date"]{
+        all: unset;
+
+        border: 1px solid var(--border-primary);
+        border-radius: .5rem;
+
+        font-size: 1rem;
+
+        padding: .5rem;
+    }
+}
+
+.title-wrap{
+    & h1{
+        font-size: 2rem;
+    }
+}
+
